--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,13 @@
   
         <div class="card col-md-10 col-sm-12">
             <div class="pt-3"><h3>Contact</h3>
+              <style>
+                h3 {
+                  font-family: Georgia, Times, "Times New Roman", serif;
+                  font-weight: 700;
+                  color: grey;
+                   }
+                  </style>
             </div>
             <hr class="my-4">
             <div class="card-body">
