--- a/portfolio.html
+++ b/portfolio.html
@@ -40,9 +40,30 @@
             <hr class="my-4">
             <div class="card-body">
                 <div class="row">
-                    <div class="col-md-6 col-sm-12">
-                        <img src="images/technics-q-c-640-480-1.jpg"  class="w-100 p-3" alt="Word Guess">
-      
+                    <div class="col-md-6 col-sm-12" >
+                        <img src="images/technics-q-c-640-480-1.jpg"  class="w-100 p-3" alt="Psychic Game">
+                        <a href=“https://mayahuang2018.github.io/Psychic-Game/”><h3 class="cover" >Psychic Game</h3></a>
+                        <style>
+                        h3 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
+  color: grey;
+   }
+
+   .cover {
+    position: absolute;
+  bottom: 20px;
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 0;
+  font-weight: 300;
+  line-height: 30px;
+  color: #fff;
+  text-align: center;
+  background:grey;
+  border-bottom: 0;
+   }
+                    </style>
                     </div>
       
                     <div class="col-md-6 col-sm-12">
