--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-12" >
                         <img src="images/technics-q-c-640-480-1.jpg"  class="w-100 p-3" alt="Psychic Game">
-                        <a href=“https://mayahuang2018.github.io/Psychic-Game/”><h3 class="cover" >Psychic Game</h3></a>
+                        <a href="https://mayahuang2018.github.io/Psychic-Game/" target="_blank"><h3 class="cover" >Psychic Game</h3></a>
                         <style>
                         h3 {
   font-family: Georgia, Times, "Times New Roman", serif;
