--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>
+    <link rel="stylesheet" type="text/css" media="screen" href="Assets/style.css">
+
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+  <script src="Assets/app.js"></script>
+
+  </head>
 <body class="bg-light">
     <header>
 
@@ -26,6 +32,16 @@
                 <li class="nav-item">
                   <a class="nav-link text-white" href="contact.html">Contact</a>
                 </li>
+
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="https://www.linkedin.com/in/fangni-huang-20908043/">Linkedin</a>
+              </li>
+
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="https://github.com/mayahuang2018">Github</a>
+            </li>
               </ul>
 
           
@@ -36,13 +52,7 @@
   
         <div class="card col-md-10 col-sm-12">
             <div class="pt-3"><h3>Contact</h3>
-              <style>
-                h3 {
-                  font-family: Georgia, Times, "Times New Roman", serif;
-                  font-weight: 700;
-                  color: grey;
-                   }
-                  </style>
+        
             </div>
             <hr class="my-4">
             <div class="card-body">
