--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <header>
 
             <nav class="navbar navbar-expand-lg navbar-dark bg-secondary p-4 mb-2">
-            <a class="navbar-brand" href="index.html">Maya HUANG</a>
+            <a class="navbar-brand" href="index.html">Maya Fangni HUANG</a>
           
             <ul class="nav justify-content-end ">
                 <li class="nav-item ">
